src/objects/Campaign_Org_Role__c.object
<CustomObject>
    <description>junction between campaign and Account</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>lookup master-detail to campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>R00N50000001hOKSEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>lookup to account</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Org Roles</relationshipLabel>
        <relationshipName>R00N50000001hOKQEA2</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>the role the org played in making the campaign happen</description>
        <label>Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Campaign Org Role</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Org Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Org Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>